--- a/LoanStatus-VH.ipynb
+++ b/LoanStatus-VH.ipynb
@@ -176,6 +176,30 @@
     "# Check our accuracy\n",
     "log_model.score(X,Y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define X for the predicting the Loan Status using the Logistics Regression for the Test Data\n",
+    "X = df.drop(['Loan_ID','LoanStatus','Dep0','Prop_Rural'], axis=1)\n",
+    "X.head()\n",
+    "\n",
+    "# Predict the classes of the testing data set ... Remember to use the correct data file and not run the above cell({4})\n",
+    "class_predict = log_model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The predicted Loan Status Values can be stored in a list\n",
+    "myResults = class_predict.tolist()"
+   ]
   }
  ],
  "metadata": {
